# Bull-s-eye

./: README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: README.md  bullseye.dune-package  bullseye.install  bullseye.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: bullseye.cma  bullseye.cmxa  bullseye.cmxs  task1.ml  task2.ml
_build/default/lib/.bullseye.objs/: bullseye__Task1.impl.d  bullseye__Task2.impl.d
_build/default/lib/.bullseye.objs/byte/: bullseye.cmt  bullseye__Task1.cmi  bullseye__Task1.cmo  bullseye__Task1.cmt  bullseye__Task2.cmi  bullseye__Task2.cmo  bullseye__Task2.cmt  bullseye__Types.cmi  bullseye__Types.cmo  bullseye__Types.cmt
_build/default/lib/.bullseye.objs/native/: bullseye__Task1.cmx  bullseye__Task2.cmx  bullseye__Types.cmx
_build/default/lib/.merlin-conf/: lib-bullseye
_build/default/test/: oUnit-test suite for task1.cache  oUnit-test suite for task2.cache  test_bullseye.ml
_build/default/test/.merlin-conf/: exe-test_bullseye
_build/default/test/.test_bullseye.eobjs/byte/: dune__exe__Test_bullseye.cmti
_build/default/test/.test_bullseye.eobjs/native/: dune__exe__Test_bullseye.cmx
lib/: task1.ml  task2.ml
