(lang dune 3.17)

(name bullseye)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Tomás Silva 68644 <tri.silva@campus.fct.unl.pt>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name bullseye)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
